id missing on button substract: button id added as operator.

--- a/calculator.html
+++ b/calculator.html
@@ -15,7 +15,7 @@
             <input id="screen" type="text" name="screen" disabled>
             <br>
             <div id="keypad">
-                <button id="clear" name="clear_screen">C</button>
+                <button id="converter" name="clear_screen">C</button>
                 <button id="converter" name="plus_minus">+/-</button>
                 <button id="converter" name="percentage">%</button>
                 <button id="operator" name="divide">/</button>
@@ -28,7 +28,7 @@
                 <button id="number" name="number4">4</button>
                 <button id="number" name="number5">5</button>
                 <button id="number" name="number6">6</button>
-                <button name="subtract">-</button>
+                <button id="operator" name="subtract">-</button>
                 <br>
                 <button id="number" name="number1">1</button>
                 <button id="number" name="number2">2</button>
