--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <link href='https://fonts.googleapis.com/css?family=Cutive Mono' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
         <meta charset="utf-8" />
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
         <script type="text/javascript" src="calculator.js"></script>
@@ -17,7 +17,7 @@
             <br>
             <div id="keypad">
                 <button id="clearscreen">C</button>
-                <button id="converter" name="plus_minus">+/-</button>
+                <button id="converter" name="plus_minus" onclick="invert()">+/-</button>
                 <button id="converter" name="percentage" onclick="getPercentage()">%</button>
                 <button id="operator" name="divide" onclick="displayOnScreen('/')">/</button>
                 <br>
@@ -29,7 +29,7 @@
                 <button id="number" name="number4" onclick="displayOnScreen(4)">4</button>
                 <button id="number" name="number5" onclick="displayOnScreen(5)">5</button>
                 <button id="number" name="number6" onclick="displayOnScreen(6)">6</button>
-                <button id="subtract" name="subtract" onclick="displayOnScreen('-')">-</button>
+                <button id="operator" name="subtract" onclick="displayOnScreen('-')">-</button>
                 <br>
                 <button id="number" name="number1" onclick="displayOnScreen(1)">1</button>
                 <button id="number" name="number2"onclick="displayOnScreen(2)">2</button>
